fix bug nav-arrow

--- a/makeSondage.html
+++ b/makeSondage.html
@@ -40,7 +40,7 @@
 
     <main>
         <div class="main-conteneur">
-            <button onclick="scrollCards('left')" class="nav-button nav-button-left"><i class="fas fa-arrow-left"></i></button>
+            <button onclick="scrollCards('left')" class="nav-button nav-button-left"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg></button>
             <div class="conteneur-cards">
                 <div class="card card1">
                     <div class="card-section1">
@@ -98,7 +98,7 @@
                         <div class="radio-group">
                             <div class="radio-option">
                                 <input type="radio" id="option1" name="radioGroup" value="option1">
-                                <label for="option1">Burger frites</label>
+                                <label for="option1">Burger</label>
                             </div>
                             <div class="radio-option">
                                 <input type="radio" id="option2" name="radioGroup" value="option2">
@@ -106,11 +106,11 @@
                             </div>
                             <div class="radio-option">
                                 <input type="radio" id="option3" name="radioGroup" value="option3">
-                                <label for="option3">Carbonnade</label>
+                                <label for="option3">Salade</label>
                             </div>
                             <div class="radio-option">
                                 <input type="radio" id="option4" name="radioGroup" value="option4">
-                                <label for="option4">Poulet frites</label>
+                                <label for="option4">Poulet</label>
                             </div>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                     <button class="validate-btn">Valider</button>
                 </div>
             </div>
-            <button onclick="scrollCards('right')" class="nav-button nav-button-right"><i class="fas fa-arrow-right"></i></button>
+            <button onclick="scrollCards('right')" class="nav-button nav-button-right"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/></svg></button>
         </div> 
     </main>
 
