fix bugs version 1.1

--- a/sondageVrac.html
+++ b/sondageVrac.html
@@ -54,160 +54,170 @@
       <div class="main-conteneur">
         <button onclick="scrollCards('left')" class="nav-button nav-button-left"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg></button>
         <div class="conteneur-cards">
-			<div class="card card1">
-			  <div class="card-section1">
-				<h3>Quel est votre série préféré ?</h3>
-				<h4> La série Breaking Bad remporte le sondage avec 20% des votes! </h4>
-				<div class="details-vote">
-				  <h5>Détail des votes:</h5>
-				  <div class="vote-item">
-					<div class="vote-info">
-					  <p>1. Breaking Bad</p>
-					  <span>20%</span>
-					</div>
-					<div class="progress-bar">
-					  <div class="progress" style="width: 20%"></div>
+        	<div class="card-movement-x card-movement-x1">
+				<div class="card card1">
+				  <div class="card-section1">
+					<h3>Quel est votre série préféré ?</h3>
+					<h4> La série Breaking Bad remporte le sondage avec 20% des votes! </h4>
+					<div class="details-vote">
+					  <h5>Détail des votes:</h5>
+					  <div class="vote-item">
+						<div class="vote-info">
+						  <p>1. Breaking Bad</p>
+						  <span>20%</span>
+						</div>
+						<div class="progress-bar">
+						  <div class="progress" style="width: 20%"></div>
+						</div>
+					  </div>
+					  <div class="vote-item">
+						<div class="vote-info">
+						  <p>2. Viking</p>
+						  <span>14%</span>
+						</div>
+						<div class="progress-bar">
+						  <div class="progress" style="width: 14%"></div>
+						</div>
+					  </div>
+					  <div class="vote-item">
+						<div class="vote-info">
+						  <p>3. Les Simpson</p>
+						  <span>8%</span>
+						</div>
+						<div class="progress-bar">
+						  <div class="progress" style="width: 8%"></div>
+						</div>
+					  </div>
+					  <div class="vote-item">
+						<div class="vote-info">
+						  <p>4. Squid Game</p>
+						  <span>6%</span>
+						</div>
+						<div class="progress-bar">
+						  <div class="progress" style="width: 6%"></div>
+						</div>
+					  </div>
 					</div>
 				  </div>
-				  <div class="vote-item">
-					<div class="vote-info">
-					  <p>2. Viking</p>
-					  <span>14%</span>
-					</div>
-					<div class="progress-bar">
-					  <div class="progress" style="width: 14%"></div>
-					</div>
+				  <div class="div-like-unlike">
+					<button class="like-btn"> <i class="fa-solid fa-thumbs-up"></i>Like </button>
+					<button class="unlike-btn"> <i class="fa-solid fa-thumbs-down"></i>Unlike </button>
 				  </div>
-				  <div class="vote-item">
-					<div class="vote-info">
-					  <p>3. Les Simpson</p>
-					  <span>8%</span>
-					</div>
-					<div class="progress-bar">
-					  <div class="progress" style="width: 8%"></div>
-					</div>
-				  </div>
-				  <div class="vote-item">
-					<div class="vote-info">
-					  <p>4. Squid Game</p>
-					  <span>6%</span>
-					</div>
-					<div class="progress-bar">
-					  <div class="progress" style="width: 6%"></div>
-					</div>
+				  <div class="comments-icone">
+					<div class="comment"><h6>Commentaires</h6></div>
+					<i style="cursor: pointer" onclick="displayResponses(responses)" class="fa-solid fa-circle-chevron-down"></i>
 				  </div>
 				</div>
-			  </div>
-			  <div class="div-like-unlike">
-				<button class="like-btn"> <i class="fa-solid fa-thumbs-up"></i>Like </button>
-				<button class="unlike-btn"> <i class="fa-solid fa-thumbs-down"></i>Unlike </button>
-			  </div>
-			  <div class="comments-icone">
-				<div class="comment"><h6>Commentaires</h6></div>
-				<i style="cursor: pointer" onclick="displayResponses(responses)" class="fa-solid fa-circle-chevron-down"></i>
-			  </div>
 			</div>
-			<div class="card card2">
-			  <div class="card-section1">
-				<h3>Quelle saison préférez vous? ?</h3>
-				<h4> L'été est la saison la plus apprécié, avec 35 % des votes! </h4>
-				<div class="details-vote">
-				  <h5>Détail des votes:</h5>
-				  <div class="vote-item">
-					<div class="vote-info">
-					  <p>1. Eté</p>
-					  <span>35%</span>
-					</div>
-					<div class="progress-bar">
-					  <div class="progress" style="width: 20%"></div>
+			<div class="card-movement-x card-movement-x2">
+				<div class="card card2">
+				  <div class="card-section1">
+					<h3>Quelle saison préférez vous? ?</h3>
+					<h4> L'été est la saison la plus apprécié, avec 35 % des votes! </h4>
+					<div class="details-vote">
+					  <h5>Détail des votes:</h5>
+					  <div class="vote-item">
+						<div class="vote-info">
+						  <p>1. Eté</p>
+						  <span>35%</span>
+						</div>
+						<div class="progress-bar">
+						  <div class="progress" style="width: 20%"></div>
+						</div>
+					  </div>
+					  <div class="vote-item">
+						<div class="vote-info">
+						  <p>2. Printemps</p>
+						  <span>25%</span>
+						</div>
+						<div class="progress-bar">
+						  <div class="progress" style="width: 14%"></div>
+						</div>
+					  </div>
+					  <div class="vote-item">
+						<div class="vote-info">
+						  <p>3. Hiver</p>
+						  <span>20%</span>
+						</div>
+						<div class="progress-bar">
+						  <div class="progress" style="width: 8%"></div>
+						</div>
+					  </div>
+					  <div class="vote-item">
+						<div class="vote-info">
+						  <p>4. Automne</p>
+						  <span>20%</span>
+						</div>
+						<div class="progress-bar">
+						  <div class="progress" style="width: 6%"></div>
+						</div>
+					  </div>
 					</div>
 				  </div>
-				  <div class="vote-item">
-					<div class="vote-info">
-					  <p>2. Printemps</p>
-					  <span>25%</span>
-					</div>
-					<div class="progress-bar">
-					  <div class="progress" style="width: 14%"></div>
-					</div>
+				  <div class="div-like-unlike">
+					<button class="like-btn"> <i class="fa-solid fa-thumbs-up"></i>Like </button>
+					<button class="unlike-btn"> <i class="fa-solid fa-thumbs-down"></i>Unlike </button>
 				  </div>
-				  <div class="vote-item">
-					<div class="vote-info">
-					  <p>3. Hiver</p>
-					  <span>20%</span>
-					</div>
-					<div class="progress-bar">
-					  <div class="progress" style="width: 8%"></div>
-					</div>
-				  </div>
-				  <div class="vote-item">
-					<div class="vote-info">
-					  <p>4. Automne</p>
-					  <span>20%</span>
-					</div>
-					<div class="progress-bar">
-					  <div class="progress" style="width: 6%"></div>
-					</div>
+				  <div class="comments-icone">
+					<div class="comment"><h6>Commentaires</h6></div>
+					<i style="cursor: pointer" onclick="displayResponses(responses)" class="fa-solid fa-circle-chevron-down"></i>
 				  </div>
 				</div>
-			  </div>
-			  <div class="div-like-unlike">
-				<button class="like-btn"> <i class="fa-solid fa-thumbs-up"></i>Like </button>
-				<button class="unlike-btn"> <i class="fa-solid fa-thumbs-down"></i>Unlike </button>
-			  </div>
-			  <div class="comment"><h6>Commentaires</h6></div>
-			  <i style="cursor: pointer" onclick="displayResponses(responses)" class="fa-solid fa-circle-chevron-down"></i>
 			</div>
-			<div class="card card3">
-			  <div class="card-section1">
-				<h3>Quel est votre jeu vidéo préféré?</h3>
-				<h4> Le jeu Fortnite remporte le sondage avec 20% des votes </h4>
-				<div class="details-vote">
-				  <h5>Détail des votes:</h5>
-				  <div class="vote-item">
-					<div class="vote-info">
-					  <p>1. Fortnite</p>
-					  <span>20%</span>
-					</div>
-					<div class="progress-bar">
-					  <div class="progress" style="width: 20%"></div>
+			<div class="card-movement-x card-movement-x3">
+				<div class="card card3">
+				  <div class="card-section1">
+					<h3>Quel est votre jeu vidéo préféré?</h3>
+					<h4> Le jeu Fortnite remporte le sondage avec 20% des votes </h4>
+					<div class="details-vote">
+					  <h5>Détail des votes:</h5>
+					  <div class="vote-item">
+						<div class="vote-info">
+						  <p>1. Fortnite</p>
+						  <span>20%</span>
+						</div>
+						<div class="progress-bar">
+						  <div class="progress" style="width: 20%"></div>
+						</div>
+					  </div>
+					  <div class="vote-item">
+						<div class="vote-info">
+						  <p>2. Pokemon</p>
+						  <span>14%</span>
+						</div>
+						<div class="progress-bar">
+						  <div class="progress" style="width: 14%"></div>
+						</div>
+					  </div>
+					  <div class="vote-item">
+						<div class="vote-info">
+						  <p>3. Call of Duty</p>
+						  <span>8%</span>
+						</div>
+						<div class="progress-bar">
+						  <div class="progress" style="width: 8%"></div>
+						</div>
+					  </div>
+					  <div class="vote-item">
+						<div class="vote-info">
+						  <p>4. Minecraft</p>
+						  <span>6%</span>
+						</div>
+						<div class="progress-bar">
+						  <div class="progress" style="width: 6%"></div>
+						</div>
+					  </div>
 					</div>
 				  </div>
-				  <div class="vote-item">
-					<div class="vote-info">
-					  <p>2. Pokemon</p>
-					  <span>14%</span>
-					</div>
-					<div class="progress-bar">
-					  <div class="progress" style="width: 14%"></div>
-					</div>
+				  <div class="div-like-unlike">
+					<button class="like-btn"> <i class="fa-solid fa-thumbs-up"></i>Like </button>
+					<button class="unlike-btn"> <i class="fa-solid fa-thumbs-down"></i>Unlike </button>
 				  </div>
-				  <div class="vote-item">
-					<div class="vote-info">
-					  <p>3. Call of Duty</p>
-					  <span>8%</span>
-					</div>
-					<div class="progress-bar">
-					  <div class="progress" style="width: 8%"></div>
-					</div>
-				  </div>
-				  <div class="vote-item">
-					<div class="vote-info">
-					  <p>4. Minecraft</p>
-					  <span>6%</span>
-					</div>
-					<div class="progress-bar">
-					  <div class="progress" style="width: 6%"></div>
-					</div>
+				  <div class="comments-icone">
+					<div class="comment"><h6>Commentaires</h6></div>
+					<i style="cursor: pointer" onclick="displayResponses(responses)" class="fa-solid fa-circle-chevron-down"></i>
 				  </div>
 				</div>
-			  </div>
-			  <div class="div-like-unlike">
-				<button class="like-btn"> <i class="fa-solid fa-thumbs-up"></i>Like </button>
-				<button class="unlike-btn"> <i class="fa-solid fa-thumbs-down"></i>Unlike </button>
-			  </div>
-			  <div class="comment"><h6>Commentaires</h6></div>
-			  <i style="cursor: pointer" onclick="displayResponses(responses)" class="fa-solid fa-circle-chevron-down"></i>
 			</div>
 		</div>
         <button onclick="scrollCards('right')" class="nav-button nav-button-right"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/></svg> </button>
