--- a/makeSondage.html
+++ b/makeSondage.html
@@ -42,81 +42,87 @@
         <div class="main-conteneur">
             <button onclick="scrollCards('left')" class="nav-button nav-button-left"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg></button>
             <div class="conteneur-cards">
-                <div class="card card1">
-                    <div class="card-section1">
-                        <h3 class="question">Quel est votre animal préféré ?</h3>
-                        <div class="radio-group">
-                            <div class="radio-option">
-                                <input type="radio" id="option1" name="radioGroup" value="option1">
-                                <label for="option1">Chien</label>
-                            </div>
-                            <div class="radio-option">
-                                <input type="radio" id="option2" name="radioGroup" value="option2">
-                                <label for="option2">Chat</label>
-                            </div>
-                            <div class="radio-option">
-                                <input type="radio" id="option3" name="radioGroup" value="option3">
-                                <label for="option3">Lapin</label>
-                            </div>
-                            <div class="radio-option">
-                                <input type="radio" id="option4" name="radioGroup" value="option4">
-                                <label for="option4">Serpent</label>
-                            </div>
-                        </div>
-                    </div>
-                    <textarea placeholder="Expliquez votre choix..." class="zone-text-explication"></textarea>
-                    <button class="validate-btn">Valider</button>
+            	<div class="card-movement-x card-movement-x1">
+		            <div class="card card1">
+		                <div class="card-section1">
+		                    <h3 class="question">Quel est votre animal préféré ?</h3>
+		                    <div class="radio-group">
+		                        <div class="radio-option">
+		                            <input type="radio" id="option1" name="radioGroup" value="option1">
+		                            <label for="option1">Chien</label>
+		                        </div>
+		                        <div class="radio-option">
+		                            <input type="radio" id="option2" name="radioGroup" value="option2">
+		                            <label for="option2">Chat</label>
+		                        </div>
+		                        <div class="radio-option">
+		                            <input type="radio" id="option3" name="radioGroup" value="option3">
+		                            <label for="option3">Lapin</label>
+		                        </div>
+		                        <div class="radio-option">
+		                            <input type="radio" id="option4" name="radioGroup" value="option4">
+		                            <label for="option4">Serpent</label>
+		                        </div>
+		                    </div>
+		                </div>
+		                <textarea placeholder="Expliquez votre choix..." class="zone-text-explication"></textarea>
+		                <button class="validate-btn">Valider</button>
+		            </div>
                 </div>
-                <div class="card card2">
-                    <div class="card-section1">
-                        <h3 class="question">Quel est votre couleur préféré ?</h3>
-                        <div class="radio-group">
-                            <div class="radio-option">
-                                <input type="radio" id="option1" name="radioGroup" value="option1">
-                                <label for="option1">Rouge</label>
-                            </div>
-                            <div class="radio-option">
-                                <input type="radio" id="option2" name="radioGroup" value="option2">
-                                <label for="option2">Bleu</label>
-                            </div>
-                            <div class="radio-option">
-                                <input type="radio" id="option3" name="radioGroup" value="option3">
-                                <label for="option3">Vert</label>
-                            </div>
-                            <div class="radio-option">
-                                <input type="radio" id="option4" name="radioGroup" value="option4">
-                                <label for="option4">Jaune</label>
-                            </div>
-                        </div>
-                    </div>
-                    <textarea placeholder="Expliquez votre choix..." class="zone-text-explication"></textarea>
-                    <button class="validate-btn">Valider</button>
+                <div class="card-movement-x card-movement-x2">
+					<div class="card card2">
+					    <div class="card-section1">
+					        <h3 class="question">Quel est votre couleur préféré ?</h3>
+					        <div class="radio-group">
+					            <div class="radio-option">
+					                <input type="radio" id="option1" name="radioGroup" value="option1">
+					                <label for="option1">Rouge</label>
+					            </div>
+					            <div class="radio-option">
+					                <input type="radio" id="option2" name="radioGroup" value="option2">
+					                <label for="option2">Bleu</label>
+					            </div>
+					            <div class="radio-option">
+					                <input type="radio" id="option3" name="radioGroup" value="option3">
+					                <label for="option3">Vert</label>
+					            </div>
+					            <div class="radio-option">
+					                <input type="radio" id="option4" name="radioGroup" value="option4">
+					                <label for="option4">Jaune</label>
+					            </div>
+					        </div>
+					    </div>
+					    <textarea placeholder="Expliquez votre choix..." class="zone-text-explication"></textarea>
+					    <button class="validate-btn">Valider</button>
+					</div>
                 </div>
-                <div class="card card3">
-                    <div class="card-section1">
-                        <h3 class="question">Quel est le meilleur plat ?</h3>
-                        <div class="radio-group">
-                            <div class="radio-option">
-                                <input type="radio" id="option1" name="radioGroup" value="option1">
-                                <label for="option1">Burger</label>
-                            </div>
-                            <div class="radio-option">
-                                <input type="radio" id="option2" name="radioGroup" value="option2">
-                                <label for="option2">Pizza</label>
-                            </div>
-                            <div class="radio-option">
-                                <input type="radio" id="option3" name="radioGroup" value="option3">
-                                <label for="option3">Salade</label>
-                            </div>
-                            <div class="radio-option">
-                                <input type="radio" id="option4" name="radioGroup" value="option4">
-                                <label for="option4">Poulet</label>
-                            </div>
-                        </div>
-                    </div>
-                    <textarea placeholder="Expliquez votre choix..." class="zone-text-explication"></textarea>
-                    <button class="validate-btn">Valider</button>
-                </div>
+                <div class="card-movement-x card-movement-x3">
+		            <div class="card card3">
+		                <div class="card-section1">
+		                    <h3 class="question">Quel est le meilleur plat ?</h3>
+		                    <div class="radio-group">
+		                        <div class="radio-option">
+		                            <input type="radio" id="option1" name="radioGroup" value="option1">
+		                            <label for="option1">Burger</label>
+		                        </div>
+		                        <div class="radio-option">
+		                            <input type="radio" id="option2" name="radioGroup" value="option2">
+		                            <label for="option2">Pizza</label>
+		                        </div>
+		                        <div class="radio-option">
+		                            <input type="radio" id="option3" name="radioGroup" value="option3">
+		                            <label for="option3">Salade</label>
+		                        </div>
+		                        <div class="radio-option">
+		                            <input type="radio" id="option4" name="radioGroup" value="option4">
+		                            <label for="option4">Poulet</label>
+		                        </div>
+		                    </div>
+		                </div>
+		                <textarea placeholder="Expliquez votre choix..." class="zone-text-explication"></textarea>
+		                <button class="validate-btn">Valider</button>
+		            </div>
+		        </div>
             </div>
             <button onclick="scrollCards('right')" class="nav-button nav-button-right"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/></svg></button>
         </div> 
